--- a/UnamWebPanel/lang/datatables/ua.json
+++ b/UnamWebPanel/lang/datatables/ua.json
@@ -33,7 +33,7 @@
     "buttons": {
         "print": "Друкувати",
         "copy": "Скопіювати",
-        "copyTitle": "Скопіювати у буфер обміну",
+        "copyTitle": "Скопійовано",
         "copySuccess": {
             "_": "%d Рядки скопійовані",
             "1": "1 Рядок скопійовано"
